--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,7 @@
-source.. = src/java/main
 bin.includes = META-INF/,\
-               .,\
                pom.xml,\
                plugin.xml,\
                build.properties,\
                bin/com/
-src.includes = pom.xml
+src.includes = pom.xml,\
+               README.md,\
