--- a/victims-p2-repo/pom.xml
+++ b/victims-p2-repo/pom.xml
@@ -21,9 +21,13 @@
 								<!-- groupId:artifactId:version -->
 								<artifact>
 									<id>com.redhat.victims:victims-lib:1.3.1</id>
+									<instructions>
+										<Import-Package>*,org.h2;version:="1.3.171"</Import-Package>
+									</instructions>
 								</artifact>
 								<artifact>
 									<id>com.h2database:h2:1.3.171</id>
+
 								</artifact>
 								<artifact><id>org.osgi:org.osgi.enterprise:4.2.0</id></artifact>
 								<artifact><id>org.osgi:org.osgi.compendium:4.3.1</id></artifact>
