Added licensing to pom

--- a/build.properties
+++ b/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                build.properties,\
                bin/com/
 src.includes = pom.xml,\
-               README.md,\
+               README.md
+
