--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,6 @@
 			<url>http://download.eclipse.org/eclipse/updates/4.2</url>
 		</repository>
 		<repository>
-			<id>RAP</id>
-			<url>http://download.eclipse.org/rt/rap/2.0</url>
-			<layout>p2</layout>
-		</repository>
-		<repository>
 			<id>localrepo</id>
 			<layout>p2</layout>
 			<url>http://localhost:8080/site/</url>
@@ -59,14 +54,6 @@
 				<extensions>true</extensions>
 			</plugin>
 			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>target-platform-configuration</artifactId>
-				<version>0.18.1</version>
-				<configuration>
-					<resolver>p2</resolver>
-				</configuration>
-			</plugin>
-			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.4</version>
@@ -86,20 +73,55 @@
 				</configuration>
 			</plugin>
 			<plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>license-maven-plugin</artifactId>
-                <version>1.4</version>
-                <configuration>
-                    <descriptionTemplate>${basedir}/src/license/header.ftl</descriptionTemplate>
-                        <verbose>false</verbose>
-                    <licenseName>agpl_v3</licenseName>
-                    <includes>
-                        <include>**/main/**/*</include>
-                        <include>**/test/**/mock/*</include>
-                    </includes>
-                </configuration>
-            </plugin>
-			
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>license-maven-plugin</artifactId>
+				<version>1.4</version>
+				<configuration>
+					<descriptionTemplate>${basedir}/src/license/header.ftl</descriptionTemplate>
+					<verbose>false</verbose>
+					<licenseName>agpl_v3</licenseName>
+					<includes>
+						<include>**/main/**/*</include>
+						<include>**/test/**/mock/*</include>
+					</includes>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>target-platform-configuration</artifactId>
+				<version>0.18.1</version>
+				<configuration>
+					<resolver>p2</resolver>
+					<environments>
+						<environment>
+							<os>linux</os>
+							<ws>gtk</ws>
+							<arch>x86</arch>
+						</environment>
+						<environment>
+							<os>linux</os>
+							<ws>gtk</ws>
+							<arch>x86_64</arch>
+						</environment>
+						<environment>
+							<os>win32</os>
+							<ws>win32</ws>
+							<arch>x86</arch>
+						</environment>
+						<environment>
+							<os>win32</os>
+							<ws>win32</ws>
+							<arch>x86_64</arch>
+						</environment>
+						<environment>
+							<os>macosx</os>
+							<ws>cocoa</ws>
+							<arch>x86_64</arch>
+						</environment>
+					</environments>
+				</configuration>
+			</plugin>
 		</plugins>
 
 	</build>
